# photoprint

./: .gitignore  Makefile.am  autogen.sh  configure.ac  dialogs.cpp  dialogs.h  histogram.cpp  histogram.h  layout.h  layout_carousel.h  layout_imageinfo.h  layout_nup.h  layout_poster.h  layout_single.h  photoprint.cpp  pp_cms.cpp  pp_cms.h  pp_histogram.cpp  pp_histogram.h  pp_imagecontrol.cpp  pp_imagecontrol.h  pp_imageinfo.cpp  pp_imageinfo.h  pp_layout_carousel.cpp  pp_layout_carousel.h  pp_layout_carousel_pageview.cpp  pp_layout_carousel_pageview.h  pp_layout_nup.cpp  pp_layout_nup.h  pp_layout_nup_pageview.cpp  pp_layout_nup_pageview.h  pp_layout_poster.cpp  pp_layout_poster.h  pp_layout_poster_pageview.cpp  pp_layout_poster_pageview.h  pp_layout_single.cpp  pp_layout_single.h  pp_layout_single_pageview.cpp  pp_layout_single_pageview.h  pp_mainwindow.cpp  (+24 more)
effects/: Makefile.am  dialogcheck.cpp  effectselector.cpp  effectselector.h  effectwidget_tempchange.h  effectwidget_unsharpmask.h  ppeffect.cpp  ppeffect.h
gp_cppsupport/: Makefile.am  Makefile.in  gprinter.cpp  printoutputselector.cpp  printoutputselector.h
imagesource/: Makefile.am  Makefile.in  imagesource_bmp.h  imagesource_chequerboard.cpp  imagesource_cms.h  imagesource_crop.cpp  imagesource_devicen_preview.cpp  imagesource_gamma.h  imagesource_gdkpixbuf.h  imagesource_gs.h  imagesource_hsweep.cpp  imagesource_hticks.cpp  imagesource_jpeg.h  imagesource_modifiedgamma.h  imagesource_pnm.cpp  imagesource_pnm.h  imagesource_scaledensity.cpp  imagesource_scaledensity.h  imagesource_segmentmask.cpp  imagesource_tiff.cpp  imagesource_util.cpp  pixbuf_from_imagesource.h
imageutils/: Makefile.am  Makefile.in  cachedimage.cpp  jpegsave.cpp  maskpixbuf.h  rotatepixbuf.h
miscwidgets/: Makefile.am  Makefile.in  colorantselector.cpp  colorantselector.h  coloranttoggle.cpp  coloranttoggle.h  generaldialogs.h  imageselector.cpp  imageselector.h  patheditor.cpp  patheditor.h  pixbuf_from_imagedata.h  pixbufview.cpp  pixbufview.h  progressbar.cpp  progressbar.h  refcountui.h  simplecombo.cpp  simplecombo.h  spinner.h
pixbufthumbnail/: Makefile.am  egg-pixbuf-thumbnail.c  egg-pixbuf-thumbnail.h
po/: cs.po  de.gmo  es.po  nl.gmo  nl.po  pl.po  pt.po  pt_BR.po  ru.po
profilemanager/: Makefile.am  Makefile.in  intentselector.cpp  intentselector.h  lcmswrapper.cpp  lcmswrapper.h  profilemanager.cpp  profilemanager.h  profileselector.cpp  profileselector.h
shortcuts/: Makefile.in
splashscreen/: Makefile.am  splashscreen.cpp  splashscreen.h
stp_support/: printerqueues_unix.c  printerqueues_win32.c
stpui_widgets/: Makefile.am  dimension.c  dimension.h  stpui_combo.c  stpui_combo.h  stpui_file.h  stpui_optionbook.c  stpui_optionbook.h  stpui_optionpage.c  stpui_optionpage.h  stpui_printerselector.c  stpui_printerselector.h  stpui_queue.h  stpui_slider.h  stpui_toggle.h
support/: Makefile.am  Makefile.in  consumer.cpp  consumer.h  md5.cpp  pathsupport.cpp  util.cpp
